<resources>
    <string name="app_name">GetMoto</string>
    <string name="title_activity_chofer">ChoferActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_jefe">JefeActivity</string>
    <string name="title_activity_cliente">ClienteActivity</string>

    <string name="descImg">Descripcion</string>
    <string name="txtUsu">Usuario</string>
    <string name="txtCont">Contraseña</string>
    <string name="btnEntrar">Entrar</string>
    <string name="btnRegis">Registrar</string>
</resources>
